--- a/css/landing_page/main.css
+++ b/css/landing_page/main.css
@@ -41,7 +41,7 @@ nav{
     text-align: left;
 }
 
-.btnRegistro{
+nav .btnRegistro{
     border: 3px solid #9b0000;
     background: none;
     padding: 10px 30px;
@@ -76,28 +76,41 @@ nav{
 }
 
 .banner_izquierda{
-    margin-top: 5%;
+    margin-top: 0%;
     position: absolute;
-    top:20%;
-    left:0;
+    top:10%;
     width: 50%;
     height: 100%;
     float: left;
+    z-index: 100;
 }
+
 .banner_derecha{
-    margin-top: -15%;
+    margin-top: -10%;
     left:0;
     width: 50%;
     height: 100%;
     float: right;
-    color: yellow;
+}
+
+.banner_derecha lottie-player{
+    margin-top: -50%;
+    margin-left: -2%;
+    
 }
 
 .contenedor-texto{
     color: white;
     margin-left: 10%;
-    font-family: 'Nerko One', cursive;
-    font-size: 50%;
+    margin-top: 40%;
+    margin-left: 25%;
+    
+    
+}
+.typed{
+    font-family: 'Nerko One';
+    font-weight: 10%;
+    font-size: 250%;
 }
 
 .clouds{
@@ -122,4 +135,136 @@ nav{
     100%{
         transform: translateX(-100%);
     }
+}
+
+.box {
+    width: 60%;
+    padding: 40px;
+    position: absolute;
+   
+    background: #fffdfde7;
+    margin-left: 15%;
+    text-align: center;
+    transition: 0.25s;
+    margin-top: 100px;
+    color: black;
+    border-radius: 24px;
+}
+
+.box input[type="text"],
+.box input[type="password"] {
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid #9b0000;
+    padding: 10px 10px;
+    width: 250px;
+    outline: none;
+    color:black;
+    border-radius: 24px;
+    transition: 0.25s
+}
+
+.box h1 {
+    color:black;
+    text-transform: uppercase;
+    font-weight: 10%;
+    font-family: 'Oswald', sans-serif;
+    font-size: 250%;
+}
+
+.box input[type="text"]:focus,
+.box input[type="password"]:focus {
+    width: 300px;
+    border-color: rgba(231, 83, 29, 0.911);
+}
+
+.box input[type="submit"] {
+    border: 0;
+    background: black;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid black;
+    padding: 14px 40px;
+    outline: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+}
+
+.box input[type="submit"]:hover {
+    background: #9b0000;
+    border: 2px solid black;
+}
+
+.forgot {
+    text-decoration: underline;
+}
+
+ul.social-network {
+    list-style: none;
+    display: inline;
+    margin-left: 0 !important;
+    padding: 0;
+}
+
+ul.social-network li {
+    display: inline;
+    margin: 0 5px;
+}
+
+.social-network a.icoFacebook:hover {
+    background-color: #3B5998;
+}
+
+.social-network a.icoTwitter:hover {
+    background-color: #33ccff;
+}
+
+.social-network a.icoGoogle:hover {
+    background-color: #BD3518;
+}
+
+.social-network a.icoFacebook:hover i,
+.social-network a.icoTwitter:hover i,
+.social-network a.icoGoogle:hover i {
+    color: #fff;
+}
+
+a.socialIcon:hover,
+.socialHoverClass {
+    color: #44BCDD;
+}
+
+.social-circle li a {
+    display: inline-block;
+    position: relative;
+    margin: 0 auto 0 auto;
+    border-radius: 50%;
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+}
+
+.social-circle li i {
+    margin: 0;
+    line-height: 50px;
+    text-align: center
+}
+
+.social-circle li a:hover i,
+.triggeredHover {
+    transform: rotate(360deg);
+    transition: all 0.2s;
+}
+
+.social-circle i {
+    color: black;
+    transition: all 0.8s;
+    transition: all 0.8s;
 }
