--- a/css/landing_page/conocenos.css
+++ b/css/landing_page/conocenos.css
@@ -2,13 +2,16 @@
 .conocenos{
     display: flex;
     flex: wrap;
+    width:100%;
+    height: 100vh;
+    margin-top: 5%;
 }
 
 .conocenos .box{
     width: 350px;
     padding: 40px;
     background: #fff;
-    margin-top: 10%;
+    margin-top: 40%;
     box-shadow: 0 5px 15px rgba(0, 0, 0, .1);
     border-radius: 4px;
     margin: 20px;
@@ -103,8 +106,10 @@
 
     .conocenos{
         display: block !important;
-        width: 100%;
-        
+        flex: wrap;
+        width:100%;
+        height: 200%;
+        margin-top: 5%;
     }
 
 }
