--- a/css/landing_page/app.css
+++ b/css/landing_page/app.css
@@ -93,3 +93,62 @@
 .app .izquierda img{
     width: 100%;
 }
+
+@media(max-width: 1000px){
+
+    .app{
+        width: 100%;
+        display: block !important;
+    }
+    .app .derecha h2{
+        display:none !important;
+    }
+    .app .derecha p{
+        display:none !important;
+    }
+    .app .derecha img{
+        width: 100%;
+        margin-left: -10%;
+        margin-top: 250%;
+    }
+
+    .app .izquierda .img_3{
+        width: 250px;
+        padding: 40px;
+        margin-top: 5%;
+        border-radius: 4px;
+        box-sizing: border-box;
+        left: 0%;
+        overflow: hidden; 
+        text-align: center;  
+        position: absolute; 
+         z-index: 1;
+    }
+    
+    .app .izquierda .img_2{
+        width: 250px;
+        padding: 40px;
+        margin-top: 10%;
+        border-radius: 4px;
+        box-sizing: border-box;
+        left: 10%;
+        overflow: hidden; 
+        text-align: center;  
+        position: absolute; 
+         z-index: 1;
+    }
+    .app .izquierda .img_1{
+        width: 250px;
+        padding: 40px;
+        margin-top: 15%;
+        border-radius: 4px;
+        box-sizing: border-box;
+        left: 20%;
+        overflow: hidden; 
+        text-align: center;  
+        position: absolute; 
+         z-index: 1;
+    }
+    
+
+}
