--- a/css/landing_page/contacto.css
+++ b/css/landing_page/contacto.css
@@ -148,3 +148,74 @@
     }
 
 }
+
+.redes{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 10vh;
+}
+
+.redes ul{
+  position: relative;
+  display: flex;
+}
+.redes ul li{
+  position: relative;
+  list-style: none;
+}
+
+.redes ul li a{
+  position: relative;
+  width: 70px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  margin: 0 10px;
+  text-decoration: none;
+  font-size: 25px;
+  border-radius: 50%;
+  color: #e2e2e2;
+  box-shadow: inset -1px -1px 2px rgba(0,0,0,0.2),
+                     2px 2px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+.redes ul li a .fa{
+  color: #fff;
+  position: relative;
+  z-index: 1;
+}
+.redes ul li a:hover{
+  color:  #999;
+  transform: translateY(-20px);
+  box-shadow: inset -1px -1px 2px rgba(0,0,0,0.2),
+                     2px 24px 10px rgba(0, 0, 0, 0.1);
+}
+
+.redes ul li a::before{
+  content: '';
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  border-radius: 50%;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+}
+
+.redes ul li:nth-child(1) a::before{
+  background: #1877f2;
+}
+
+.redes ul li:nth-child(2) a::before{
+  background: #1da1f2;
+}
+
+.redes ul li:nth-child(3) a::before{
+  background: #25d366;
+}
+.redes ul li:nth-child(4) a::before{
+  background: #c32aa3;
+}
