--- a/css/landing_page/app.css
+++ b/css/landing_page/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 .app{
     background-color:#a4152c;
     display: flex;
@@ -23,15 +24,20 @@
 }
 
 
-
-
 .app .izquierda{
     margin-top: 0%;
-    top:30%;
+    top:10%;
     width: 50%;
     height: 100%;
     float: left;
     z-index: 100;
+}
+.app .izquierda h1{
+    top:5%;
+    font-family: 'Lobster', cursive;
+    color: white;
+    text-align: center;
+    text-shadow:  0.05em 0 0 rgba(0, 0, 0, 0.76);
 }
 
 
@@ -70,7 +76,7 @@
 .app .izquierda .img_3{
     width: 350px;
     padding: 40px;
-    margin-top: 5%;
+    margin-top: 0%;
     border-radius: 4px;
     box-sizing: border-box;
     left: 0%;
@@ -83,7 +89,7 @@
 .app .izquierda .img_2{
     width: 350px;
     padding: 40px;
-    margin-top: 10%;
+    margin-top: 5%;
     border-radius: 4px;
     box-sizing: border-box;
     left: 10%;
@@ -96,7 +102,7 @@
 .app .izquierda .img_1{
     width: 350px;
     padding: 40px;
-    margin-top: 15%;
+    margin-top: 10%;
     border-radius: 4px;
     box-sizing: border-box;
     left: 20%;
@@ -165,6 +171,10 @@
         text-align: center;  
         position: absolute; 
          z-index: 1;
+    }
+
+    .app::after{
+        display: none !important;
     }
     
 
