--- a/css/landing_page/comunidad.css
+++ b/css/landing_page/comunidad.css
@@ -1,7 +1,7 @@
 .comunidad{
     margin: 0;
 	padding: 0;
-	font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 :root {
@@ -14,7 +14,7 @@
 --light-red:#f3ac99;
 --light-teal:#a6c8cc;
 --light-gray:#ddd5d6;
-    --theme-color2: #e89a3d;
+    --theme-color2:#263238;
 }
 
 
@@ -204,4 +204,70 @@ margin: 0;
 width: 38px;
 display: block;
 margin-bottom: 30px;
+}
+
+@media(max-width: 1000px){
+
+    .comunidad{
+        width: 100%;
+    }
+
+    .gallery-thumbs .swiper-slide {
+        background-position: center;
+        background-size: cover;
+        width: 50% !important;
+        height: 50%;
+        position: relative;
+        }
+        
+        .gallery-thumbs .swiper-slide img {
+            filter: contrast(0.5) blur(1px);
+            width: 100%;
+            height: 70%;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+        .testimonial-section .quote {
+            width: 75%;
+            height: 100%;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+            flex-direction: column;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            padding-left: 30px;
+            padding-right: 20px;
+        }
+        .testimonial-section .quote p {
+                font-size: 15px;
+                font-weight: 300;
+                line-height: 1.8;
+                font-style: italic;
+                margin: 0;
+            }
+            .quote-icon {
+                width: 28px;
+                display: block;
+                margin-bottom: 30px;
+            }
+            .testimonial .name {
+                font-weight: bold;
+                font-size: 14px;
+                letter-spacing: 0.04em;
+                line-height: 35px;
+                text-align: left;
+            }
+                .testimonial .designation {
+                font-size: 10px;
+                letter-spacing: 0.04em;
+                text-align: left;
+                color: #fff;
+                opacity: 0.65;
+            }
+           
 }
